--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "webpack": "webpack",
     "gulp": "gulp",
     "rimraf": "rimraf",
+    "build:with-test": "npm run test && npm run build",
     "build": "npm run build:aot",
     "build:aot": "rimraf .aot/ .dist/ release/ && npm run inline-resources && ngc -p tsconfig-aot.json && rimraf .aot/node_modules && npm run prepare-dist",
     "build:angular": "ngc -p tsconfig-aot.json",
@@ -17,14 +18,14 @@
     "clean": "rimraf .aot/ .dist/ release/ node_modules/",
     "inline-resources": "gulp --gulpfile ./config/gulpfile.js --cwd ./",
     "karma": "karma",
-    "test": "karma start"
+    "test": "karma start --single-run"
   },
   "dependencies": {
     "@angular/animations": "~4.3.1",
     "@angular/common": "~4.3.1",
-    "@angular/compiler": "~4.3.1",
-    "@angular/compiler-cli": "~4.3.1",
-    "@angular/core": "~4.3.1",
+    "@angular/compiler": "^4.3.6",
+    "@angular/compiler-cli": "^4.3.6",
+    "@angular/core": "^4.3.6",
     "@angular/forms": "~4.3.1",
     "@angular/http": "~4.3.1",
     "@angular/platform-browser": "~4.3.1",
@@ -33,55 +34,31 @@
     "@angular/router": "~4.3.1",
     "@angular/tsc-wrapped": "~4.3.1",
     "@angular/upgrade": "~4.3.1",
-    "@ng-bootstrap/ng-bootstrap": "1.0.0-alpha.23",
-    "angular-router-loader": "^0.6.0",
-    "angular2-template-loader": "^0.6.2",
-    "awesome-typescript-loader": "^3.1.3",
-    "rxjs": "^5.4.0",
-    "tslint": "^5.4.3",
-    "typescript": "^2.3.4",
-    "zone.js": "^0.7.8",
-    "bootstrap": "^4.0.0-alpha.6",
-    "material-design-icons": "^3.0.1"
-  },
-  "devDependencies": {
-    "@types/angular": "^1.5.16",
-    "@types/angular-animate": "^1.5.5",
-    "@types/angular-cookies": "^1.4.2",
-    "@types/angular-mocks": "^1.5.5",
-    "@types/angular-resource": "^1.5.6",
-    "@types/angular-route": "^1.3.2",
-    "@types/angular-sanitize": "^1.3.3",
-    "@types/jasmine": "2.5.36",
-    "@types/node": "^6.0.45",
-    "@angular/cli": "1.2.7",
-    "@angular/compiler-cli": "^2.4.10",
-    "@angular/platform-server": "^2.4.10",
-    "clean-webpack-plugin": "^0.1.16",
-    "compression-webpack-plugin": "^0.4.0",
-    "extract-text-webpack-plugin": "^2.1.2",
-    "favicons-webpack-plugin": "0.0.7",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.5",
+    "@ngrx/core": "^1.2.0",
+    "@ngrx/store": "^4.0.3",
+    "@types/jasmine": "^2.6.0",
+    "@types/node": "^8.0.32",
+    "core-js": "^2.5.1",
     "gulp": "^3.9.1",
     "gulp-ext-replace": "^0.3.0",
     "gulp-rename": "^1.2.2",
     "gulp-rimraf": "^0.2.1",
     "gulp-sass": "^3.1.0",
-    "html-webpack-plugin": "^2.28.0",
-    "jasmine-core": "^2.6.4",
-    "karma": "^1.7.0",
-    "karma-chrome-launcher": "^2.1.1",
-    "karma-cli": "^1.0.1",
-    "karma-coverage": "^1.1.1",
-    "karma-coverage-istanbul-reporter": "^0.3.0",
+    "node-sass-magic-importer": "^5.0.0-alpha.14",
+    "rimraf": "^2.6.2",
+    "rxjs": "^5.4.3",
+    "typescript": "^2.5.3",
+    "zone.js": "^0.8.18"
+  },
+  "devDependencies": {
+    "@angular/cli": "^1.2.7",
+    "@types/core-js": "^0.9.43",
+    "jasmine-core": "^2.8.0",
+    "karma": "^1.7.1",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-coverage-istanbul-reporter": "^1.3.0",
     "karma-jasmine": "^1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-remap-istanbul": "^0.6.0",
-    "karma-sourcemap-loader": "^0.3.7",
-    "node-sass": "^4.5.3",
-    "node-sass-magic-importer": "^4.1.5",
-    "raw-loader": "^0.5.1",
-    "rimraf": "^2.6.1",
-    "webpack": "^2.6.1",
-    "webpack-bundle-analyzer": "^2.8.2"
+    "karma-jasmine-html-reporter": "^0.2.2"
   }
 }
