--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,9 +8,11 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "lib": [
+      "es5",
       "es6",
       "es2015",
-      "dom"
+      "dom",
+      "es2016.array.include"
     ],
     "typeRoots": [
       "./node_modules/@types"
