--- a/package.json
+++ b/package.json
@@ -1,63 +1,70 @@
 {
-  "name": "@ws/angular-lib",
-  "version": "0.0.1",
-  "license": "ISC",
-  "main": "src/index.ts",
-  "angular-cli": {},
-  "scripts": {
-    "ngc": "ngc",
-    "gulp": "gulp",
-    "rimraf": "rimraf",
-    "build:with-test": "npm run test && npm run build",
-    "build": "npm run build:aot",
-    "build:aot": "rimraf .aot/ dist/ release/ && npm run inline-resources && ngc -p tsconfig.json && rimraf .aot/node_modules && npm run prepare-dist",
-    "build:angular": "ngc -p tsconfig.json",
-    "prepare-dist": "node ./.config/scripts/build/prepare-dist.js",
-    "clean": "rimraf .aot/ dist/ release/ node_modules/",
-    "inline-resources": "gulp --gulpfile ./.config/gulpfile.js --cwd ./",
-    "karma": "karma",
-    "test": "karma start --single-run",
-    "start": "ng serve",
-    "setup": "yarn install"
-  },
-  "dependencies": {
-    "@angular/animations": "~4.3.1",
-    "@angular/cli": "^1.2.7",
-    "@angular/common": "~4.3.1",
-    "@angular/compiler": "~4.3.1",
-    "@angular/compiler-cli": "~4.3.1",
-    "@angular/core": "~4.3.1",
-    "@angular/forms": "~4.3.1",
-    "@angular/http": "~4.3.1",
-    "@angular/platform-browser": "~4.3.1",
-    "@angular/platform-browser-dynamic": "~4.3.1",
-    "@angular/platform-server": "~4.3.1",
-    "@angular/router": "~4.3.1",
-    "@angular/tsc-wrapped": "~4.3.1",
-    "@angular/upgrade": "~4.3.1",
-    "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.5",
-    "@ngrx/core": "^1.2.0",
-    "@ngrx/store": "^4.0.3",
-    "@types/core-js": "^0.9.43",
-    "@types/jasmine": "^2.6.0",
-    "@types/node": "^8.0.32",
-    "core-js": "^2.5.1",
-    "gulp": "^3.9.1",
-    "gulp-ext-replace": "^0.3.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-rimraf": "^0.2.1",
-    "gulp-sass": "^3.1.0",
-    "jasmine-core": "^2.8.0",
-    "jslint": "^0.11.0",
-    "karma": "^1.7.1",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-coverage-istanbul-reporter": "^1.3.0",
-    "karma-jasmine": "^1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "node-sass-magic-importer": "^5.0.0-alpha.14",
-    "rimraf": "^2.6.2",
-    "rxjs": "^5.4.3",
-    "typescript": "<2.4.0",
-    "zone.js": "^0.8.18"
-  }
+    "name": "@ws/angular-lib",
+    "version": "0.0.1",
+    "license": "ISC",
+    "main": "src/index.ts",
+    "angular-cli": {},
+    "scripts": {
+        "ngc": "ngc",
+        "gulp": "gulp",
+        "rimraf": "rimraf",
+        "build:with-test": "npm run test && npm run build",
+        "build": "npm run build:aot",
+        "build:aot": "rimraf .aot/ dist/ release/ && npm run inline-resources && ngc -p tsconfig.json && rimraf .aot/node_modules && npm run prepare-dist",
+        "build:angular": "ngc -p tsconfig.json",
+        "prepare-dist": "node ./.config/scripts/build/prepare-dist.js",
+        "clean": "rimraf .aot/ dist/ release/ node_modules/",
+        "inline-resources": "gulp --gulpfile ./.config/gulpfile.js --cwd ./",
+        "karma": "karma",
+        "test": "karma start --single-run",
+        "start": "ng serve",
+        "setup": "node ./.config/build-scripts/setup.js"
+    },
+    "dependencies": {
+        "@angular/animations": "~4.3.1",
+        "@angular/cli": "^1.2.7",
+        "@angular/common": "~4.3.1",
+        "@angular/compiler": "~4.3.1",
+        "@angular/compiler-cli": "~4.3.1",
+        "@angular/core": "~4.3.1",
+        "@angular/forms": "~4.3.1",
+        "@angular/http": "~4.3.1",
+        "@angular/platform-browser": "~4.3.1",
+        "@angular/platform-browser-dynamic": "~4.3.1",
+        "@angular/platform-server": "~4.3.1",
+        "@angular/router": "~4.3.1",
+        "@angular/tsc-wrapped": "~4.3.1",
+        "@angular/upgrade": "~4.3.1",
+        "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.5",
+        "@ngrx/core": "^1.2.0",
+        "@ngrx/store": "^4.0.3",
+        "@types/core-js": "^0.9.43",
+        "@types/jasmine": "^2.6.0",
+        "@types/node": "^8.0.32",
+        "core-js": "^2.5.1",
+        "gulp": "^3.9.1",
+        "gulp-ext-replace": "^0.3.0",
+        "gulp-rename": "^1.2.2",
+        "gulp-rimraf": "^0.2.1",
+        "gulp-sass": "^3.1.0",
+        "jasmine-core": "^2.8.0",
+        "jslint": "^0.11.0",
+        "karma": "^1.7.1",
+        "karma-chrome-launcher": "^2.2.0",
+        "karma-coverage-istanbul-reporter": "^1.3.0",
+        "karma-jasmine": "^1.1.0",
+        "karma-jasmine-html-reporter": "^0.2.2",
+        "node-sass-magic-importer": "^5.0.0-alpha.14",
+        "rimraf": "^2.6.2",
+        "rxjs": "^5.4.3",
+        "typescript": "<2.4.0",
+        "zone.js": "^0.8.18"
+    },
+    "devDependencies": {
+        "chalk": "^2.1.0",
+        "change-case": "^3.0.1",
+        "readline-sync": "^1.4.7",
+        "replace-in-file": "^3.0.0-beta.2",
+        "validate-npm-package-name": "^3.0.0"
+    }
 }
