--- a/package.json
+++ b/package.json
@@ -1,7 +1,15 @@
 {
     "name": "@ws/angular-lib",
     "version": "0.0.1",
-    "license": "ISC",
+    "license": "MIT",
+    "author": {
+        "name": "JP Guevara",
+        "email": "chorew@gmail.com"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/jpguevara/angular-4-lib-aot.git"
+    },
     "main": "src/index.ts",
     "angular-cli": {},
     "scripts": {
@@ -35,13 +43,18 @@
         "@angular/router": "~4.3.1",
         "@angular/tsc-wrapped": "~4.3.1",
         "@angular/upgrade": "~4.3.1",
-        "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.5",
         "@ngrx/core": "^1.2.0",
         "@ngrx/store": "^4.0.3",
         "@types/core-js": "^0.9.43",
         "@types/jasmine": "^2.6.0",
         "@types/node": "^8.0.32",
         "core-js": "^2.5.1",
+        "rxjs": "^5.4.3",
+        "zone.js": "^0.8.18"
+    },
+    "devDependencies": {
+        "chalk": "^2.1.0",
+        "change-case": "^3.0.1",
         "gulp": "^3.9.1",
         "gulp-ext-replace": "^0.3.0",
         "gulp-rename": "^1.2.2",
@@ -55,16 +68,10 @@
         "karma-jasmine": "^1.1.0",
         "karma-jasmine-html-reporter": "^0.2.2",
         "node-sass-magic-importer": "^5.0.0-alpha.14",
-        "rimraf": "^2.6.2",
-        "rxjs": "^5.4.3",
-        "typescript": "<2.4.0",
-        "zone.js": "^0.8.18"
-    },
-    "devDependencies": {
-        "chalk": "^2.1.0",
-        "change-case": "^3.0.1",
         "readline-sync": "^1.4.7",
         "replace-in-file": "^3.0.0-beta.2",
+        "rimraf": "^2.6.2",
+        "typescript": "<2.4.0",
         "validate-npm-package-name": "^3.0.0"
     }
 }
